# Graphics-engine

./: .gitignore  CMakeLists.txt  Color.cpp  Color.h  Face.cpp  Face.h  Figure.cpp  Figure.h  FigureParser.cpp  FigureParser.h  FractalFigures.cpp  FractalFigures.h  ImageSize.cpp  ImageSize.h  LSystem2D.cpp  LSystem2D.h  Line2D.cpp  Line2D.h  NotPlatonic.cpp  NotPlatonic.h  Platonic.cpp  Platonic.h  Point2D.cpp  Projection.cpp  Projection.h  README.md  Scale.cpp  Scale.h  TransformationMatrix.cpp  TransformationMatrix.h  Triangles.cpp  Triangles.h  WireframeParser.cpp  WireframeParser.h  ZBuffer.cpp  ZBuffer.h  ZBufferedWireframeParser.cpp  ZBufferedWireframeParser.h  ZParser.cpp  ZParser.h  (+9 more)
2D L-Systemen/: Color.cpp  Color.h  LSystem2D.cpp  LSystem2D.h  Line2D.cpp  Line2D.h
2D_L-Systemen/: Color.h  LSystem2D.cpp  LSystem2D.h  Line2D.cpp  Line2D.h  Point2D.h
Header Files/: Face.h  Figure.h  FigureParser.h  FractalFigures.h  ImageSize.h  Include.hpp  NotPlatonic.h  Platonic.h  Projection.h  Scale.h  TransformationMatrix.h  Triangles.h  WireframeParser.h  ZBuffer.h  ini_configuration.h  l_SystemsFunc.h
INI/3d_fractals/: default.profraw
INI/l_systems/: default.profraw
INI/line_drawings/: default.profraw
INI/my_own _ini_files/: 002.ini  003.ini  004.ini  006.ini  007.ini  009.ini  010.ini  011.ini  012.ini  013.ini  filelist
INI/wireframes/: default.profraw
INI/z_buffered_wireframes/: default.profraw
Lines/: Color.cpp  Color.h  Lines2D.h  Point2D.h  draw2DLines.h  drawLines2D.h
my_own _ini_files/: 001.ini  005.ini  008.ini  filelist
utils /: CMakeLists.txt  easy_image.cc  easy_image.h  engine.cc
